tests for heart_rate_controller
