# swagger_server/controllers/heart_rate_controller.py
@@ -1,7 +1,7 @@
 import connexion
 import six
 
-from swagger_server.models.heart_rate_trip import InlineResponse2003  # noqa: E501
+from swagger_server.models.heart_rate_trip import HeartRateTrip  # noqa: E501
 from swagger_server import util
 
 
@@ -13,7 +13,7 @@ def get_heart_rate_trip(trip_id):  # noqa: E501
     :param trip_id: 
     :type trip_id: float
 
-    :rtype: List[InlineResponse2003]
+    :rtype: List[HeartRateTrip]
     """
     return 'do some magic!'
 
@@ -25,6 +25,6 @@ def get_heartrate_by_traffic(is_traffic_jam):  # noqa: E501
     :param is_traffic_jam: 
     :type is_traffic_jam: bool
 
-    :rtype: List[InlineResponse2007]
+    :rtype: List[is_traffic_jam]
     """
     return 'do some magic!'
