# swagger_server/controllers/location_controller.py
@@ -1,7 +1,7 @@
 import connexion
 import six
 
-from swagger_server.models.location_trip import InlineResponse2004  # noqa: E501
+from swagger_server.models.location_trip import LocationTrip  # noqa: E501
 from swagger_server import util
 
 
@@ -13,7 +13,7 @@ def get_location_trip(trip_id):  # noqa: E501
     :param trip_id: 
     :type trip_id: float
 
-    :rtype: List[InlineResponse2004]
+    :rtype: List[LocationTrip]
     """
     return 'do some magic!'
 
