# swagger_server/swagger/swagger.yaml
@@ -3,266 +3,287 @@ info:
   title: HeartOnTheRoad API
   version: 1.0.0
 servers:
-- url: /
+  - url: /heart/v1
 tags:
-- name: Analytics
-  description: Endpoints for retrieving analytics data
-- name: Trip
-  description: Endpoints related to trip data
-- name: HeartRate
-  description: Endpoints for heart rate data
-- name: Location
-  description: Endpoints for location data
+  - name: Analytics
+    description: Endpoints for retrieving analytics data
+  - name: Trip
+    description: Endpoints related to trip data
+  - name: HeartRate
+    description: Endpoints for heart rate data
+  - name: Location
+    description: Endpoints for location data
+  - name: Traffic
+    description: Endpoints for traffic and heartrate correlation
+
 paths:
   /api/analytic:
     get:
-      tags:
-      - Analytics
       summary: Get analytics data
-      operationId: get_analytic_data
+      operationId: controller.get_analytic_data
+      tags:
+        - Analytics
       responses:
-        "200":
+        200:
           description: Successful retrieval of analytics data
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/inline_response_200"
-      x-openapi-router-controller: swagger_server.controllers.analytics_controller
+                type: object
+                properties:
+                  last_time_stamp:
+                    type: string
+                    format: date-time
+                  record:
+                    type: object
+                    properties:
+                      total:
+                        type: number
+                      trafficjam:
+                        type: number
+                      normal:
+                        type: number
+                      trip:
+                        type: number
+                  average_duration:
+                    type: number
+                  heartrate:
+                    type: object
+                    properties:
+                      average:
+                        type: number
+                      trafficjam:
+                        type: number
+                      normal:
+                        type: number
+
   /api/analytic/relation:
     get:
-      tags:
-      - Analytics
       summary: Get heart rate and traffic ratio relation
-      operationId: get_analytic_relation
+      operationId: controller.get_analytic_relation
+      tags:
+        - Analytics
       responses:
-        "200":
+        200:
           description: Successful retrieval of relation data
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/inline_response_200_1"
-                x-content-type: application/json
-      x-openapi-router-controller: swagger_server.controllers.analytics_controller
+                  type: object
+                  properties:
+                    heartrate:
+                      type: number
+                    ratio:
+                      type: number
+                      description: Ratio of current speed to free-flow speed
+
   /api/trip/{trip_id}:
     get:
-      tags:
-      - Trip
       summary: Get trip details
-      operationId: get_trip_details
+      operationId: controller.get_trip_details
+      tags:
+        - Trip
       parameters:
-      - name: trip_id
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: number
+        - name: trip_id
+          in: path
+          required: true
+          schema:
+            type: number
       responses:
-        "200":
+        200:
           description: Successful retrieval of trip details
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/inline_response_200_2"
-      x-openapi-router-controller: swagger_server.controllers.trip_controller
+                type: object
+                properties:
+                  record:
+                    type: object
+                    properties:
+                      total:
+                        type: number
+                      trafficjam:
+                        type: number
+                      normal:
+                        type: number
+                  start_time:
+                    type: string
+                    format: date-time
+                  duration:
+                    type: number
+                    description: Duration in minutes
+                  min_heartrate:
+                    type: number
+                  max_heartrate:
+                    type: number
+                  average_heartrate:
+                    type: number
+
   /api/heartrate/trip/{trip_id}:
     get:
-      tags:
-      - HeartRate
       summary: Get heart rate data for a trip
-      operationId: get_heart_rate_trip
+      operationId: controller.get_heart_rate_trip
+      tags:
+        - HeartRate
       parameters:
-      - name: trip_id
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: number
+        - name: trip_id
+          in: path
+          required: true
+          schema:
+            type: number
       responses:
-        "200":
+        200:
           description: Successful retrieval of heart rate data
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/inline_response_200_3"
-                x-content-type: application/json
-      x-openapi-router-controller: swagger_server.controllers.heart_rate_controller
+                  type: object
+                  properties:
+                    time:
+                      type: string
+                      format: date-time
+                    heartrate:
+                      type: number
+
   /api/location/trip/{trip_id}:
     get:
-      tags:
-      - Location
       summary: Get location data for a trip
-      operationId: get_location_trip
+      operationId: controller.get_location_trip
+      tags:
+        - Location
       parameters:
-      - name: trip_id
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: number
+        - name: trip_id
+          in: path
+          required: true
+          schema:
+            type: number
       responses:
-        "200":
+        200:
           description: Successful retrieval of location data
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/inline_response_200_4"
-                x-content-type: application/json
-      x-openapi-router-controller: swagger_server.controllers.location_controller
+                  type: object
+                  properties:
+                    latitude:
+                      type: number
+                    longitude:
+                      type: number
+                    currentSpeed:
+                      type: number
+                    freeFlowSpeed:
+                      type: number
+
   /api/trip:
     get:
-      tags:
-      - Trip
       summary: Get number of trips
-      operationId: get_number_of_trips
+      operationId: controller.get_number_of_trips
+      tags:
+        - Trip
       responses:
-        "200":
+        200:
           description: Successful retrieval of trip count
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/inline_response_200_5"
-      x-openapi-router-controller: swagger_server.controllers.trip_controller
-components:
-  schemas:
-    inline_response_200:
-      type: object
-      properties:
-        last_time_stamp:
-          type: string
-          format: date-time
-        record:
-          type: object
-          properties:
-            total:
-              type: number
-            trafficjam:
-              type: number
-            normal:
-              type: number
-            trip:
-              type: number
-          example:
-            normal: 1.46581298050294517310021547018550336360931396484375
-            total: 0.80082819046101150206595775671303272247314453125
-            trip: 5.962133916683182377482808078639209270477294921875
-            trafficjam: 6.02745618307040320615897144307382404804229736328125
-        average_duration:
-          type: number
-        heartrate:
-          type: object
-          properties:
-            average:
-              type: number
-            trafficjam:
-              type: number
-            normal:
-              type: number
-          example:
-            average: 2.3021358869347654518833223846741020679473876953125
-            normal: 9.301444243932575517419536481611430644989013671875
-            trafficjam: 7.061401241503109105224211816675961017608642578125
-      example:
-        last_time_stamp: 2000-01-23T04:56:07.000+00:00
-        heartrate:
-          average: 2.3021358869347654518833223846741020679473876953125
-          normal: 9.301444243932575517419536481611430644989013671875
-          trafficjam: 7.061401241503109105224211816675961017608642578125
-        record:
-          normal: 1.46581298050294517310021547018550336360931396484375
-          total: 0.80082819046101150206595775671303272247314453125
-          trip: 5.962133916683182377482808078639209270477294921875
-          trafficjam: 6.02745618307040320615897144307382404804229736328125
-        average_duration: 5.63737665663332876420099637471139430999755859375
-    inline_response_200_1:
-      type: object
-      properties:
-        heartrate:
-          type: number
-        ratio:
-          type: number
-          description: Ratio of current speed to free-flow speed
-      example:
-        heartrate: 0.80082819046101150206595775671303272247314453125
-        ratio: 6.02745618307040320615897144307382404804229736328125
-    inline_response_200_2:
-      type: object
-      properties:
-        record:
-          type: object
-          properties:
-            total:
-              type: number
-            trafficjam:
-              type: number
-            normal:
-              type: number
-          example:
-            normal: 1.46581298050294517310021547018550336360931396484375
-            total: 0.80082819046101150206595775671303272247314453125
-            trafficjam: 6.02745618307040320615897144307382404804229736328125
-        start_time:
-          type: string
-          format: date-time
-        duration:
-          type: number
-          description: Duration in minutes
-        min_heartrate:
-          type: number
-        max_heartrate:
-          type: number
-        average_heartrate:
-          type: number
-      example:
-        duration: 5.962133916683182377482808078639209270477294921875
-        start_time: 2000-01-23T04:56:07.000+00:00
-        min_heartrate: 5.63737665663332876420099637471139430999755859375
-        max_heartrate: 2.3021358869347654518833223846741020679473876953125
-        record:
-          normal: 1.46581298050294517310021547018550336360931396484375
-          total: 0.80082819046101150206595775671303272247314453125
-          trafficjam: 6.02745618307040320615897144307382404804229736328125
-        average_heartrate: 7.061401241503109105224211816675961017608642578125
-    inline_response_200_3:
-      type: object
-      properties:
-        time:
-          type: string
-          format: date-time
-        heartrate:
-          type: number
-      example:
-        heartrate: 0.80082819046101150206595775671303272247314453125
-        time: 2000-01-23T04:56:07.000+00:00
-    inline_response_200_4:
-      type: object
-      properties:
-        latitude:
-          type: number
-        longitude:
-          type: number
-        currentSpeed:
-          type: number
-        freeFlowSpeed:
-          type: number
-      example:
-        latitude: 0.80082819046101150206595775671303272247314453125
-        freeFlowSpeed: 5.962133916683182377482808078639209270477294921875
-        currentSpeed: 1.46581298050294517310021547018550336360931396484375
-        longitude: 6.02745618307040320615897144307382404804229736328125
-    inline_response_200_5:
-      type: object
-      properties:
-        number_of_trip:
-          type: number
-      example:
-        number_of_trip: 0.80082819046101150206595775671303272247314453125
+                type: object
+                properties:
+                  number_of_trip:
+                    type: number
 
+
+
+  /api/traffic/{isTrafficJam}:
+    get:
+      summary: Get summary statistics for heart rate and traffic by traffic condition
+      operationId: controller.get_traffic_summary
+      tags:
+        - Traffic
+      parameters:
+        - name: isTrafficJam
+          in: path
+          required: true
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: Summary of heart rate and traffic data
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  number_of_records:
+                    type: number
+                  max_heartrate:
+                    type: number
+                  min_heartrate:
+                    type: number
+                  average_heartrate:
+                    type: number
+                  average_speed:
+                    type: number
+                  average_travel_time:
+                    type: number
+
+  /api/heartrate/traffic/{is_traffic_jam}:
+    get:
+      summary: Get timestamped heart rate data filtered by traffic condition
+      operationId: controller.get_heartrate_by_traffic
+      tags:
+        - HeartRate
+      parameters:
+        - name: is_traffic_jam
+          in: path
+          required: true
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: List of heart rate entries
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    timestamp:
+                      type: string
+                      format: date-time
+                    heartrate:
+                      type: number
+
+  /api/speed/traffic/{isTrafficJam}:
+    get:
+      summary: Get current speed data filtered by traffic condition
+      operationId: controller.get_speed_by_traffic
+      tags:
+        - Location
+      parameters:
+        - name: isTrafficJam
+          in: path
+          required: true
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: List of current speed entries
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    timestamp:
+                      type: string
+                      format: date-time
+                    currentSpeed:
+                      type: number
